<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Wits Academy</string>

    <string name="fullName"> &#160;&#160;&#160; Full Name</string>
    <string name="email"> &#160;&#160;&#160; Email</string>
    <string name="password"> &#160;&#160;&#160; Password</string>
    <string name="confirmPassword"> &#160;&#160;&#160; Confirm Password</string>

    <string name="registerHere">Don\'t have an account? <b><u>Register here</u></b></string>
    <string name="loginHere">Already have an account? <b><u>Login here</u></b></string>

    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="account">Account</string>
    <string name="forgotPassword"><u>Forgot Password?</u></string>

    <string name="developed"> <u>Developed by</u>:</string>
    <string name="cae"> <b>Ctrl Alt Elite </b></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="teacher">teacher</string>
    <string name="student">student</string>
    <string name="teacherTextView">Want to change to <b>Teacher</b> view? Click below.</string>
    <string name="settings">settings</string>
    <string name="studentTextView">Want to change to <b>Student</b> view? Click below.</string>
    <string name="update">Update</string>
    <string name="change_password">Change Password</string>
    <string name="create_quiz">Create Quiz</string>

    <string-array name="Categories_array">
        <item>All Courses</item>
        <item>Science Faculty</item>
        <item>Commerce Faculty</item>
        <item>Education Faculty</item>
        <item>Health Science Faculty</item>
        <item>Engineering Faculty</item>
        <item>Arts and Music Faculty</item>
    </string-array>

</resources>